@@ -37,35 +37,36 @@ typedef enum
 {
 	MRN_FLAG_ANIMATION = 1 << 0,
 	MRN_FLAG_ARROWSTYLE = 1 << 1,
-	MRN_FLAG_COLORIZE_SCROLLBAR = 1 << 2,
-	MRN_FLAG_COMBOBOXSTYLE = 1 << 3,
-	MRN_FLAG_CONTRAST = 1 << 4,
-	MRN_FLAG_DISABLE_FOCUS = 1 << 5,
-	MRN_FLAG_FOCUS_COLOR = 1 << 6,
-	MRN_FLAG_GLAZESTYLE = 1 << 7,
-	MRN_FLAG_GLOW_SHADE = 1 << 8,
-	MRN_FLAG_GLOWSTYLE = 1 << 9,
-	MRN_FLAG_HIGHLIGHT_SHADE = 1 << 10,
-	MRN_FLAG_LIGHTBORDER_SHADE = 1 << 11,
-	MRN_FLAG_LIGHTBORDERSTYLE= 1 << 12,
-	MRN_FLAG_LISTVIEWHEADERSTYLE = 1 << 13,
-	MRN_FLAG_LISTVIEWSTYLE = 1 << 14,
-	MRN_FLAG_MENUBARITEMSTYLE = 1 << 15,
-	MRN_FLAG_MENUBARSTYLE = 1 << 16,
-	MRN_FLAG_MENUITEMSTYLE = 1 << 17,
-	MRN_FLAG_MENUSTYLE = 1 << 18,
-	MRN_FLAG_PRELIGHT_SHADE = 1 << 19,
-	MRN_FLAG_PROGRESSBARSTYLE = 1 << 20,
-	MRN_FLAG_RELIEFSTYLE = 1 << 21,
-	MRN_FLAG_RGBA = 1 << 22,
-	MRN_FLAG_ROUNDNESS = 1 << 23,
-	MRN_FLAG_SCROLLBARSTYLE = 1 << 24,
-	MRN_FLAG_SEPARATORSTYLE = 1 << 25,
-	MRN_FLAG_SLIDERSTYLE = 1 << 26,
-	MRN_FLAG_SPINBUTTONSTYLE = 1 << 27,
-	MRN_FLAG_STEPPERSTYLE = 1 << 28,
-	MRN_FLAG_TEXTSTYLE = 1 << 29,
-	MRN_FLAG_TOOLBARSTYLE = 1 << 30
+	MRN_FLAG_CELLSTYLE = 1 << 2,
+	MRN_FLAG_COLORIZE_SCROLLBAR = 1 << 3,
+	MRN_FLAG_COMBOBOXSTYLE = 1 << 4,
+	MRN_FLAG_CONTRAST = 1 << 5,
+	MRN_FLAG_DISABLE_FOCUS = 1 << 6,
+	MRN_FLAG_FOCUS_COLOR = 1 << 7,
+	MRN_FLAG_GLAZESTYLE = 1 << 8,
+	MRN_FLAG_GLOW_SHADE = 1 << 9,
+	MRN_FLAG_GLOWSTYLE = 1 << 10,
+	MRN_FLAG_HIGHLIGHT_SHADE = 1 << 11,
+	MRN_FLAG_LIGHTBORDER_SHADE = 1 << 12,
+	MRN_FLAG_LIGHTBORDERSTYLE= 1 << 13,
+	MRN_FLAG_LISTVIEWHEADERSTYLE = 1 << 14,
+	MRN_FLAG_LISTVIEWSTYLE = 1 << 15,
+	MRN_FLAG_MENUBARITEMSTYLE = 1 << 16,
+	MRN_FLAG_MENUBARSTYLE = 1 << 17,
+	MRN_FLAG_MENUITEMSTYLE = 1 << 18,
+	MRN_FLAG_MENUSTYLE = 1 << 19,
+	MRN_FLAG_PRELIGHT_SHADE = 1 << 20,
+	MRN_FLAG_PROGRESSBARSTYLE = 1 << 21,
+	MRN_FLAG_RELIEFSTYLE = 1 << 22,
+	MRN_FLAG_RGBA = 1 << 23,
+	MRN_FLAG_ROUNDNESS = 1 << 24,
+	MRN_FLAG_SCROLLBARSTYLE = 1 << 25,
+	MRN_FLAG_SEPARATORSTYLE = 1 << 26,
+	MRN_FLAG_SLIDERSTYLE = 1 << 27,
+	MRN_FLAG_SPINBUTTONSTYLE = 1 << 28,
+	MRN_FLAG_STEPPERSTYLE = 1 << 29,
+	MRN_FLAG_TEXTSTYLE = 1 << 30,
+	MRN_FLAG_TOOLBARSTYLE = 1 << 31
 } MurrineRcFlags;
 
 typedef enum
@@ -96,6 +97,7 @@ struct _MurrineRcStyle
 	double   trough_shades[2];
 
 	guint8   arrowstyle;
+	guint8   cellstyle;
 	guint8   comboboxstyle;
 	guint8   glazestyle;
 	guint8   glowstyle;
